--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -1912,13 +1912,13 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Saturday • 9:40 AM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kVq-FT-xpZ">
                                                 <rect key="frame" x="142" y="20" width="117" height="16"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Why?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4c-Lx-DjL">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spill the beans" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4c-Lx-DjL">
                                                 <rect key="frame" x="175" y="54" width="50" height="23"/>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="19"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -1949,7 +1949,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="18" id="GJG-3h-I5g"/>
                                                                 </constraints>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="11"/>
                                                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -2000,7 +2000,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="18" id="NDo-r0-eEf"/>
                                                                 </constraints>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="11"/>
                                                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -2051,7 +2051,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="18" id="q14-ef-eW8"/>
                                                                 </constraints>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="11"/>
                                                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -2102,7 +2102,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="18" id="9v6-SU-Xvg"/>
                                                                 </constraints>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="11"/>
                                                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -2148,7 +2148,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="18" id="uge-MP-zrl"/>
                                                                 </constraints>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="11"/>
                                                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -2199,7 +2199,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="18" id="cgr-YI-x5A"/>
                                                                 </constraints>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="11"/>
                                                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -2250,7 +2250,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="18" id="2bc-md-9Nz"/>
                                                                 </constraints>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="11"/>
                                                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -2301,7 +2301,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="18" id="cYL-7s-ddU"/>
                                                                 </constraints>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="11"/>
                                                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -2383,7 +2383,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="19"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                         <connections>
                                                             <outlet property="delegate" destination="fTm-Vk-pUw" id="NYE-Bd-6pj"/>
@@ -2392,8 +2392,8 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                 </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <constraints>
-                                                    <constraint firstItem="jDb-wj-8uM" firstAttribute="top" secondItem="RvV-eo-xfy" secondAttribute="top" constant="20" id="KaZ-ek-kqT">
-                                                        <variation key="heightClass=compact" constant="15"/>
+                                                    <constraint firstItem="jDb-wj-8uM" firstAttribute="top" secondItem="RvV-eo-xfy" secondAttribute="top" constant="15" id="KaZ-ek-kqT">
+                                                        <variation key="heightClass=compact" constant="10"/>
                                                     </constraint>
                                                     <constraint firstAttribute="trailing" secondItem="jDb-wj-8uM" secondAttribute="trailing" constant="14" id="Mph-Fd-Dd9">
                                                         <variation key="heightClass=compact" constant="16"/>
@@ -2435,13 +2435,13 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                             <constraint firstItem="ORY-cW-RfJ" firstAttribute="top" secondItem="HRk-PQ-j7O" secondAttribute="top" id="cho-5Z-kjW"/>
                                             <constraint firstItem="kVq-FT-xpZ" firstAttribute="top" secondItem="HRk-PQ-j7O" secondAttribute="top" constant="20" id="dhj-t7-GTX"/>
                                             <constraint firstAttribute="height" constant="750" id="eeb-k5-oq8"/>
-                                            <constraint firstItem="v4c-Lx-DjL" firstAttribute="top" secondItem="kVq-FT-xpZ" secondAttribute="bottom" constant="18" id="fXe-83-uAX">
+                                            <constraint firstItem="v4c-Lx-DjL" firstAttribute="top" secondItem="kVq-FT-xpZ" secondAttribute="bottom" constant="20" id="fXe-83-uAX">
                                                 <variation key="heightClass=compact" constant="24"/>
                                             </constraint>
                                             <constraint firstItem="ORY-cW-RfJ" firstAttribute="leading" secondItem="HRk-PQ-j7O" secondAttribute="leading" id="gsE-YE-hn0"/>
                                             <constraint firstItem="sHr-74-r9g" firstAttribute="leading" secondItem="HRk-PQ-j7O" secondAttribute="leading" constant="6" id="hTb-ay-hmb"/>
                                             <constraint firstAttribute="trailing" secondItem="sHr-74-r9g" secondAttribute="trailing" constant="6" id="i1l-9T-Dlp"/>
-                                            <constraint firstItem="sHr-74-r9g" firstAttribute="top" secondItem="v4c-Lx-DjL" secondAttribute="bottom" constant="28" id="oM5-vO-md4">
+                                            <constraint firstItem="sHr-74-r9g" firstAttribute="top" secondItem="v4c-Lx-DjL" secondAttribute="bottom" constant="14" id="oM5-vO-md4">
                                                 <variation key="heightClass=compact" constant="24"/>
                                             </constraint>
                                             <constraint firstAttribute="width" constant="400" id="sm3-sd-WZg"/>
@@ -2468,7 +2468,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                         <variation key="heightClass=compact" constant="50"/>
                                     </constraint>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="18"/>
                                 <state key="normal" title="Save">
                                     <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </state>
