--- a/The Math/Base.lproj/LaunchScreen.xib
+++ b/The Math/Base.lproj/LaunchScreen.xib
@@ -32,8 +32,7 @@
                                     <exclude reference="kbI-3q-RzO"/>
                                 </mask>
                             </variation>
-                            <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                <rect key="frame" x="-77" y="30" width="349" height="44"/>
+                            <variation key="heightClass=regular-widthClass=compact">
                                 <mask key="constraints">
                                     <include reference="kbI-3q-RzO"/>
                                 </mask>
@@ -41,9 +40,6 @@
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_graphic" translatesAutoresizingMaskIntoConstraints="NO" id="WVX-u4-Na3">
                             <rect key="frame" x="180" y="8" width="120" height="120"/>
-                            <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                <rect key="frame" x="83" y="0.0" width="28" height="10"/>
-                            </variation>
                         </imageView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -71,8 +67,7 @@
                             <exclude reference="WBy-LY-diZ"/>
                         </mask>
                     </variation>
-                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                        <rect key="frame" x="143" y="192" width="194" height="97"/>
+                    <variation key="heightClass=regular-widthClass=compact">
                         <mask key="subviews">
                             <include reference="kId-c2-rCX"/>
                             <include reference="WVX-u4-Na3"/>
